changed the css stylings on all pages to make game more responsive and to make sure no controls or links are covered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,14 +273,13 @@ header a {
 }
 
 .form-section {
-   margin-top: 5%;
+   margin-top:10%;
    color: #fff;
    background-color: rgba(60, 60, 60, 0.6);
    max-width: 500px;
-   position: absolute;
    margin-left: 5%;
    margin-right: 5%;
-   padding: 15px;
+   padding: 30px;
    text-align: center;
 }
 
@@ -379,8 +378,10 @@ header a {
    /*styling for form page on smaller devices*/
    .form-background {
       background-repeat: no-repeat;
+      background-size: cover;
       max-width: 100%;
       height: auto;
+      margin-bottom: 25%;
    }
 }
 
@@ -480,6 +481,7 @@ header a {
    #menu li {
       letter-spacing: 5px;
       display: inline;
+      font-size: 150%;
    }
 
    /*styling for the 4 panels reduced size*/
@@ -511,29 +513,29 @@ header a {
 
    /*all styling for the switches section at the bottom of the screen*/
    #switches {
-      margin-top: 5%;
-      font-size: 150%;
+      margin-top: 15%;
+      font-size: 200%;
    }
 
    /*this is for the turn counter in the game*/
    #turn {
-      height: 50px;
-      width: 50px;
+      height: 70px;
+      width: 70px;
       line-height: 40px;
-      margin-left: 45.5%;
+      margin-left: 44%;
    }
 
    /*styling for the count text*/
    .texttwo {
-      font-size: 100%;
-      margin-left: 45%;
+      font-size: 150%;
+      margin-left: 42%;
+      margin-bottom: 2%
    }
 
    /*link to feedback form page*/
    .page-link2 {
-      top: 110%;
       margin-left: 60%;
-      font-size: 125%;
+      font-size: 200%;
    }
 
    /*styling for enter the clone wars link*/
@@ -560,6 +562,41 @@ header a {
 }
 
 /*For large to medium screens sizes from 600px wide and down */
+@media screen and (max-width: 450px) {
+   
+   /*for the nav bar on the game page and feedback form page*/
+   #menu li {
+      letter-spacing: 5px;
+      display: inline;
+      font-size: 100%;
+   }
+
+   /*all styling for the switches section at the bottom of the screen*/
+   #switches {
+      margin-top: 15%;
+      font-size: 150%;
+   }
+
+   /*link to feedback form page*/
+   .page-link2 {
+      margin-left: 60%;
+      font-size: 150%;
+   }
+
+   /*styling for form page on smaller devices*/
+   .form-background {
+      background-image: url("../../assets/images/form-mobile-battleship.jpg");
+      max-width: 100%;
+      height: auto;
+   }
+
+   .form-section {
+      margin-top: 45%;
+      padding: 30px;
+   }
+}
+
+/*For large to medium screens sizes from 600px wide and down */
 @media screen and (max-width: 400px) {
    /*for the home screen background image which changes on mobile devices*/
    .enter-battlefield {
@@ -575,7 +612,7 @@ header a {
    /*styling for header on home page*/
    h1 {
       text-align: center;
-      font-size: 250%;
+      font-size: 350%;
       font-weight: 300;
       letter-spacing: 5px;
       text-shadow: 5px 5px 5px greenyellow;
@@ -584,7 +621,7 @@ header a {
    h2 {
       text-align: center;
       text-decoration: underline;
-      font-size: 100%;
+      font-size: 180%;
       font-weight: 300;
       letter-spacing: 10px;
    }
@@ -645,7 +682,7 @@ header a {
 
    /*code for title of the game page and its styling*/
    header a {
-      font-size: 120%;
+      font-size: 160%;
       letter-spacing: 5px;
       text-shadow: 5px 5px 5px red;
    }
@@ -736,9 +773,10 @@ header a {
 
    /*this is to control the dimensions of the feedback form*/
    .form-section {
-      margin-top: 15%;
+      margin-top: 25%;
       padding: 20px;
-      font-size: 120%;
+      font-size: 150%;
+      margin-bottom: 20%;
    }
    /*for the first box of the feedback form*/
    .text-input {
@@ -756,7 +794,7 @@ header a {
 
    /*for the submit button at the bottom of the feedback page*/
    .submit {
-      margin-top: 1%;
+      margin-top: 5%;
       border-radius: 2px;
       padding: 15px 15px 15px 15px;
       display: block;
@@ -849,7 +887,7 @@ header a {
 
       /*code for title of the game page and its styling*/
       header a {
-         font-size: 100%;
+         font-size: 150%;
          letter-spacing: 5px;
          text-shadow: 5px 5px 5px red;
       }
@@ -937,32 +975,32 @@ header a {
          background-repeat: no-repeat;
          max-width: 100%;
          height: auto;
+         margin-bottom: 30%;
       }
 
       /*title for feedback form page on smaller devices*/
       .feedback-title {
          text-align: center;
-         font-size: 100%;
+         font-size: 150%;
          font-weight: 300;
       }
 
       /*this is to control the dimensions of the feedback form*/
       .form-section {
-         margin-top: 8%;
+         margin-top: 45%;
          color: #fff;
          background-color: rgba(60, 60, 60, 0.6);
          max-width: 500px;
-         position: absolute;
          padding: 8px;
          text-align: center;
-         font-size: 80%;
+         font-size: 120%;
       }
       /*for the first box of the feedback form*/
       .text-input {
          background: transparent;
          color: #fafafa;
          width: 100%;
-         height: 20px;
+         height: 60px;
          margin: 5px 0 20px 0;
       }
 
@@ -971,7 +1009,7 @@ header a {
          background: transparent;
          color: #fafafa;
          width: 100%;
-         height: 50px;
+         height: 80px;
          margin: 5px 0 20px 0;
       }
 
